--- a/package.json
+++ b/package.json
@@ -4,18 +4,23 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "test": "jest",
+    "test": "jest --watchAll",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "test": "jest --watchAll",
     "lint": "expo lint"
   },
   "jest": {
     "preset": "jest-expo",
     "transformIgnorePatterns": [
       "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
+    ],
+    "testMatch": [
+      "<rootDir>/__tests__/**/*.js"
+    ],
+    "setupFiles": [
+      "<rootDir>/jestSetup.js"
     ]
   },
   "dependencies": {
@@ -31,13 +36,12 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.6",
     "expo-web-browser": "~13.0.3",
+    "jest-expo": "~51.0.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.2",
     "react-native-appwrite": "^0.4.0",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-url-polyfill": "^2.0.0",
@@ -45,12 +49,19 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@testing-library/dom": "^10.1.0",
+    "@testing-library/react": "^16.0.0",
+    "@testing-library/react-native": "^12.5.1",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
+    "@types/react-dom": "^18.3.0",
     "@types/react-test-renderer": "^18.0.7",
+    "eslint-plugin-testing-library": "^6.2.2",
     "jest": "^29.7.0",
     "jest-expo": "~51.0.1",
-    "react-test-renderer": "18.2.0",
+    "react-native-gesture-handler": "^2.16.2",
+    "react-native-reanimated": "^3.12.0",
+    "react-test-renderer": "^18.2.0",
     "tailwindcss": "^3.3.2",
     "typescript": "~5.3.3"
   },
