--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,15 @@
 name: test
 run-name: ${{ github.actor }} is pushing to ${{ github.ref }}
-on: [push]
+on:
+  push:
+    branches:
+      - "**"
 jobs:
   setup:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-    runs-on: ${{ matrix.os }}
+    runs-on: self-hosted
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
