--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,14 @@
 name: test
+
 run-name: ${{ github.actor }} is pushing to ${{ github.ref }}
 on:
   push:
     branches:
-      - "**"
+      - main  # Only run the workflow on push events to the main branch
+  pull_request:
+    branches:
+      - main  # Run the workflow on pull requests targeting the main branch
+
 jobs:
   setup:
     strategy:
@@ -16,5 +21,12 @@ jobs:
         with:
           node-version: '20'
       - run: npm install
-      - run: echo "Hello Developer!"
 
+  test:
+    needs: setup  # Indicates that this job depends on the 'setup' job
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+    runs-on: self-hosted
+    steps:
+      - run: npm run test  # Runs the tests
