--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,12 @@
     ".expo/types/**/*.ts",
     "expo-env.d.ts", 
     "declarations.d.ts",
-    "constants/icons.ts"  ]
+    "constants/icons.ts"
+  ],
+  "exclude": [
+    "node_modules",
+    "babel.config.js",
+    "metro.config.js",
+    "jest.config.js"
+  ]
 }
